--- a/app/src/main/res/layout/fragment_entries.xml
+++ b/app/src/main/res/layout/fragment_entries.xml
@@ -129,7 +129,7 @@
                 android:textColor="@color/radio_flat_text_selector" />
 
             <RadioButton
-                android:id="@+id/radio_foreseen"
+                android:id="@+id/radio_accomplished"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/radio_flat_selector"
@@ -139,7 +139,7 @@
                 android:paddingTop="3dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="3dp"
-                android:text="Previsto"
+                android:text="Realizado"
                 android:textColor="@color/radio_flat_text_selector" />
 
         </RadioGroup>
