--- a/app/src/main/res/layout/item_entry_parent.xml
+++ b/app/src/main/res/layout/item_entry_parent.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginBottom="4dp"
+    android:layout_marginBottom="0.5dp"
     android:layout_height="30dp"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
     android:background="@color/gray">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,8 +39,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
