--- a/app/src/main/res/layout/item_entry_child.xml
+++ b/app/src/main/res/layout/item_entry_child.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".ui.adapter.EntryManageEntriesAdapter"
-    android:layout_margin="1dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
     android:layout_gravity="center_horizontal">
 
 <!--    <TextView-->
