--- a/app/src/main/res/layout/fragment_add_area_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_area_dialog.xml
@@ -33,77 +33,119 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_title">
 
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:foregroundGravity="center"
-            android:gravity="center"
-            android:paddingLeft="8dp"
-            android:text="Nome:"
-            android:textColor="@color/black"
-            android:textSize="10sp"
+        <LinearLayout
+            android:id="@+id/linear_layout_name"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="left"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlHardcoded">
 
-        <EditText
-            android:id="@+id/edit_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:hint="Adicione aqui o nome"
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/text_name"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:text="Nome:"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_area"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:foregroundGravity="center"
-            android:gravity="center"
-            android:paddingLeft="8dp"
-            android:text="Área(hectares):"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            <EditText
+                android:id="@+id/edit_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:hint="Adicione aqui o nome"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/text_name"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_layout_area"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="left"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_name" />
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout_name"
+            tools:ignore="RtlHardcoded">
 
-        <EditText
-            android:id="@+id/edit_area"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:hint="Dimensão da área"
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/text_area"
-            app:layout_constraintTop_toBottomOf="@+id/edit_name" />
+            <TextView
+                android:id="@+id/text_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:text="Área(hectares):"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="36dp" />
 
-        <TextView
-            android:id="@+id/text_crop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:foregroundGravity="center"
-            android:gravity="center"
-            android:paddingLeft="8dp"
-            android:text="Cultura:"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <EditText
+                android:id="@+id/edit_area"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:inputType="number"
+                android:hint="Dimensão da área"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="136dp"
+                tools:layout_editor_absoluteY="24dp" />
+        </LinearLayout>
 
-        <Spinner
-            android:id="@+id/spinner_crop"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:hint="Localização da propriedade"
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/text_crop"
-            app:layout_constraintTop_toBottomOf="@+id/edit_area" />
+        <LinearLayout
+            android:id="@+id/linear_layout_crop"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="left"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout_area"
+            tools:ignore="RtlHardcoded"
+            tools:layout_editor_absoluteX="16dp">
+
+            <TextView
+                android:id="@+id/text_crop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="4dp"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:text="Cultura:"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <Spinner
+                android:id="@+id/spinner_crop"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:hint="Localização da propriedade"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/text_crop"
+                app:layout_constraintTop_toBottomOf="@+id/edit_area" />
+        </LinearLayout>
+
+
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
