--- a/app/src/main/res/layout/fragment_entries.xml
+++ b/app/src/main/res/layout/fragment_entries.xml
@@ -2,24 +2,27 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    tools:context=".ui.EntriesFragment"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         android:orientation="vertical"
-        tools:context=".ui.EntriesFragment">
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout_spinners"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -63,34 +66,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/spinner_propiety" />
 
             <TextView
-                android:id="@+id/text_crop"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="Cultivo: "
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_area" />
-
-            <Spinner
-                android:id="@+id/spinner_crop"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_margin="12dp"
-                app:layout_constraintStart_toEndOf="@+id/text_crop"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_area" />
-
-            <TextView
                 android:id="@+id/text_year"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="Safra(ano): "
+                android:text="Safra: "
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_crop" />
+                app:layout_constraintTop_toBottomOf="@+id/text_area" />
 
             <Spinner
                 android:id="@+id/spinner_year"
@@ -98,7 +82,7 @@
                 android:layout_height="32dp"
                 android:layout_margin="12dp"
                 app:layout_constraintStart_toEndOf="@+id/text_year"
-                app:layout_constraintTop_toBottomOf="@+id/spinner_crop" />
+                app:layout_constraintTop_toBottomOf="@+id/spinner_area" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -108,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:padding="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
